Using shared stylesheet

--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -1,7 +1,8 @@
 <!doctype html public "embarassment">
 <title>Basic react-menu example</title>
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-<link href="app.css" rel="stylesheet"/>
+<link rel="stylesheet" href="http://instructure-react.github.io/library/shared.css"/>
+<link rel="stylesheet" href="app.css"/>
 <body>
   <header class="branding padbox">
     <h1>react-menu</h1>
